syntax = "proto3";

option go_package = "/mep4-default";

package mep4_default;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc GetSplashes (GetSplashesRequest) returns (Mep4Response) {}
}

message GetSplashesRequest {
  int64 from = 1;
  int64 to = 2;
  string sensor_id = 3;
}

message Mep4Response {
  repeated Splash splashes = 1;
  repeated Mep4 Noices = 2;
}

message Splash {
  repeated Mep4 items = 1;
}

message Mep4 {
  	int32 id = 1;
	  int32 Pm25 = 2;
	  uint64 Time = 3;
	  int32 Location_id = 4;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}